Services/Interests Section Completed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Abhishek Sai</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Font-Awesome  -->
+  <script src="https://kit.fontawesome.com/9de886b1f3.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="header"></div>
@@ -22,7 +24,7 @@
     <div class="header-text">
       <p>Software Developer</p>
       <h1>Hi, I am <span>Abhishek!<br></span>I am an aspiring Software Developer.</h1>
-    </div>
+  </div>
 <!--ABOUT-->
 <div id="about">
   <div class="container">
@@ -72,10 +74,39 @@
       </div>
     </div>
   </div>
-
 </div>
+</div>
+<!-- Format Divs properly -->
+
+<!-- -------------Services------- -->
+<div id="services">
+  <div class="container">
+    <h1 class="sub-title">My Services</h1>
+    <div class="services-list">
+      <div>
+        <i class="fa-solid fa-code"></i>
+        <h2>Web Development</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam eos cum et dicta culpa iste soluta, aspernatur atque ex, voluptatibus adipisci ratione excepturi est asperiores nulla possimus earum doloremque commodi.</p>
+        <a href="#">Learn More</a>
+      </div>
+      <div>
+        <i class="fa-regular fa-envelope"></i>
+        <h2>API Development</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam eos cum et dicta culpa iste soluta, aspernatur atque ex, voluptatibus adipisci ratione excepturi est asperiores nulla possimus earum doloremque commodi.</p>
+        <a href="#">Learn More</a>
+      </div>
+      <div>
+        <i class="fa-solid fa-calculator"></i>
+        <i class="fa-solid fa-brain"></i>
+        <h2>Mental Math</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam eos cum et dicta culpa iste soluta, aspernatur atque ex, voluptatibus adipisci ratione excepturi est asperiores nulla possimus earum doloremque commodi.</p>
+        <a href="#">Learn More</a>
+      </div>
+
+    </div>
 
   </div>
+</div>
 
   <script>
     // External JS file later?
