My Projects Section

--- a/index.html
+++ b/index.html
@@ -108,6 +108,39 @@
   </div>
 </div>
 
+<!-- ----------------------Projects----------->
+<div class="portfolio"></div>
+  <div class="container">
+    <h1 class="sub-title">My Projects</h1>
+    <div class="projects-list">
+      <div class="project"> 
+        <img src="images/proj1.jpeg">
+        <div class="layer">
+          <h3>NotesApp</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro recusandae animi excepturi praesentium accusantium error laborum quam hic, consequatur explicabo.</p>
+          <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+        </div>
+      </div>
+      <div class="project"> 
+        <img src="images/proj2.png">
+        <div class="layer">
+          <h3>API Development</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro recusandae animi excepturi praesentium accusantium error laborum quam hic, consequatur explicabo.</p>
+          <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+        </div>
+      </div>
+      <div class="project"> 
+        <img src="images/proj3.svg">
+        <div class="layer">
+          <h3>Twitter Search Engine</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro recusandae animi excepturi praesentium accusantium error laborum quam hic, consequatur explicabo.</p>
+          <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+        </div>
+      </div>
+    </div>
+    <a href="#" class="btn">See More</a>
+  </div>
+</div>
   <script>
     // External JS file later?
    var tablinks=document.getElementsByClassName("tab-links");  
