--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="header"></div>
     <div class="container">
       <nav>
-        <h1 id="name"><span id="first-letter">A</span>BHISHEK SAI SURISETTY</h1>
+        <h1 id="name"><span class="first-letter">A</span>BHISHEK <span class=" not-first-name">S</span>AI <span class="not-first-name">S</span>URISETTY</h1>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -109,7 +109,7 @@
 </div>
 
 <!-- ----------------------Projects----------->
-<div class="portfolio"></div>
+<div class="portfolio">
   <div class="container">
     <h1 class="sub-title">My Projects</h1>
     <div class="projects-list">
@@ -141,6 +141,37 @@
     <a href="#" class="btn">See More</a>
   </div>
 </div>
+<!-- -----------------Contact---------- -->
+<div id="contact">
+  <div class="container">
+    <div class="row">
+      <div class="contact-left">
+        <h1 class="sub=title">Contact Me</h1>
+        <p><i class="fa-solid fa-paper-plane"></i> abhi********@gmail.com</p>
+        <p> <i class="fa-solid fa-phone"></i> +1 347*******</p>
+        <div class="social-icons">
+          <a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter-square"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+        <a href="files/BlankFile.docx" download class="btn btn2">Download Resume</a>
+      </div>
+      <div class="contact-right">
+        <form>
+            <input type="text" name="Name" placeholder="Your Name" required>
+            <input type="email" name="Email" placeholder="Your Email" required>
+            <input type="tel" name="Mobile Number" placeholder="Your Mobile Number (Not Mandatory)">
+            <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+            <button type="submit" class="btn btn2">Submit</button>
+        </form>
+    </div>
+  </div>
+</div>
+<div class="copyright">
+  <p> Copyright <span>&copy;</span>Abhishek.<br> Website Developed with <i class="fa-solid fa-heart"></i> by Abhishek</i></p>
+</div>
+
   <script>
     // External JS file later?
    var tablinks=document.getElementsByClassName("tab-links");  
