--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!-- ----------------SKILLS----------------------- -->
         <div class="tab-contents active-tab" id="skills">
           <ul>
-              <li><span>Programming Languages</span><br>C/C++,Java,JavaScript,Python</li>
+              <li><span>Programming Languages</span><br>C/C++,Java,JavaScript,Python,CUDA C</li>
               <li><span>Web</span><br>HTML,CSS,RESTful APIs,JWT,Bootstrap</li>
               <li><span>Databases</span><br>MySQL,MongoDB,Amazon DynamoDB</li>    
               <li><span>Libraries/Frameworks</span><br>ReactJS,ExpressJS,Spring Boot</li>    
@@ -62,8 +62,9 @@
         <div class="tab-contents" id="experience">
           <ul>
             <!-- Segregate into academic and professional experiences with Dates,etc  -->
-              <li><span>Ernst and Young LLP</span><br>Associate Technology Consultant - Software Developer</li>
-              <li><span>Cisco</span><br>Software Engineering Intern</li>
+              <li><span>Ernst and Young LLP</span><br>Software Engineer (Associate Technology Consultant)</li>
+              <li><span>Cisco</span><br>Software Engineer Intern</li>
+              <li><span>Vasudhaika Software Solutions</span><br>Software Engineer Intern</li>
               <li><span>UC Riverside</span><br>Graduate Teaching Assistant</li>    
               <li><span>UC Riverside</span><br>Graduate Grader</li>   
               <li><span>BITS Pilani</span><br>Undergraduate Teaching Assistant</li>   
