--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <ul>
               <li><span>UC Riverside</span><br>Master of Science: Computer Engineering</li>
               <!-- Add Relavant Courses later -->
-              <li><span>BITS Pilani</span><br>Bachelors of Engineering: Electronics and Communication</li>
+              <li><span>BITS Pilani</span><br>Bachelor of Engineering: Electronics and Communication</li>
               <!-- <li><span>Frontend</span><br>Frontend Developer</li>    -->
           </ul>
         </div>
